# fastapi_for_ai

./: .gitignore  README.md  exception_handlers.py  main.py  pyproject.toml  requirements.txt  temp_repro.py
DEST_DOCS_FOR_AI/: semiconductor.txt
VECTOR_STORE_DB/repeating_data_chroma_db/: chroma.sqlite3
chains_all_07/: chains_call.py  routes.py
chatbot_01/: routes.py
chatbot_04/: routes.py
custom_tools_12/: base_tool.py  routes.py  structured_tool.py  tool_decorator.py
custom_tools_12/model/: custom_tool_model.py
document_loaders_all_08/: document_loader_calls.py  routers.py
document_loaders_all_08/model/: document_loader_model.py
embeddings_all_02/: embeddings_call.py  routes.py
embeddings_all_02/model/: embed_data_model.py
file_uploads/: routes.py
general_00/: general_methods.py  routes.py  static_data.py
general_00/model/: patient.py
models_all_01/: chat_openai.py  routes.py
output_parsers_all_06/: output_parser_call.py  routes.py
output_parsers_all_06/model/: output_parser_model.py
prompting_all_003/: prompt_call.py  routes.py
prompting_all_003/model/: prompt_data_model.py
retriever_all_11/: retriever_call.py  routes.py
retriever_all_11/model/: retriever_model.py
structured_output_all_05/: routes.py  structured_analysis.py
structured_output_all_05/model/: review_model.py
text_splitter_09/: routes.py  text_splitter_call.py
text_splitter_09/model/: text_splitter_model.py
tool_calling_basic_13/: basic_multiply_tool_calling.py  routes.py
vector_store_all_10/: chroma_store_call.py  routes.py
(+2 files in other folders)
