[project]
name = "fastapi-for-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi[standard]>=0.138.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.20.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "numpy>=2.5.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
